manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "exam"
  labels:
    app: "exam"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: "exam"
